--- a/public/UserSide/cssBook/style.css
+++ b/public/UserSide/cssBook/style.css
@@ -1,24 +1,17 @@
 /********** Template CSS **********/
 :root {
-    --primary: #04448C;
+    --primaray: #174ab8 !important;
+    --primaray2: #335db7 !important;
     --secondary: #FE8800;
     --light: #F5F5F5;
-    --dark: #0E2A47;
+    --dark: #14141F;
+    --secodery-color:#FFC11A;
 }
 
 .fw-medium {
     font-weight: 600 !important;
 }
 
-
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-    color:#FFC11A !important;}
-
-.text-primary{
-    /* color: #04448C !important; */
-    color: var(--primary) !important;
-
-}
 .fw-semi-bold {
     font-weight: 700 !important;
 }
@@ -52,9 +45,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
     transition: .5s;
+    color: var(--light);
+    background:linear-gradient(to top,var(--primaray),var(--primaray2),var(--primaray));
 }
 
-.btn.btn-primary,
+.btn.btn-primaray,
 .btn.btn-secondary {
     color: #FFFFFF;
 }
@@ -106,7 +101,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: var(--primary) !important;
+    color: var(--secondary) !important;
 }
 
 .navbar-light .navbar-brand img {
@@ -163,7 +158,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
         height: 2px;
         bottom: -1px;
         left: 50%;
-        background: var(--primary);
+        background: var(--primaray);
         transition: .5s;
     }
 
@@ -181,7 +176,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(#04438c2d, #2e70c056), url(/images/Banner.jpg);
+    background: linear-gradient(to bottom,#000000,#0e294773),
+     url(/images/bookNow.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -206,7 +202,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     height: 2px;
     top: 4px;
     left: -40px;
-    background: var(--primary);
+    background: var(--primaray);
     z-index: -1;
 }
 
@@ -217,7 +213,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     height: 2px;
     bottom: 5px;
     left: -60px;
-    background: var(--primary);
+    background: var(--primaray);
     z-index: -1;
 }
 
@@ -239,7 +235,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .service-item:hover {
-    background: var(--primary);
+    background: var(--secondary) !important;
 }
 
 .service-item * {
@@ -247,7 +243,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .service-item:hover * {
-    color: var(--light) !important;
+    color: var(--secodery-color) !important;
 }
 
 
@@ -299,13 +295,13 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 .team-item .btn {
     background: #FFFFFF;
-    color: var(--primary);
+    color: var(--primaray);
     border-radius: 20px;
-    border-bottom: 1px solid var(--primary);
+    border-bottom: 1px solid var(--primaray);
 }
 
 .team-item .btn:hover {
-    background: var(--primary);
+    background: var(--secodery-color);
     color: #FFFFFF;
 }
 
@@ -353,8 +349,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .testimonial-carousel .owl-item.center .testimonial-item {
-    background: var(--primary) !important;
-    border-color: var(--primary) !important;
+    background: var(--primaray) !important;
+    border-color: var(--primaray) !important;
 }
 
 .testimonial-carousel .owl-item.center .testimonial-item * {
@@ -380,8 +376,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .testimonial-carousel .owl-dot.active {
-    background: var(--primary);
-    border-color: var(--primary);
+    background: var(--primaray);
+    border-color: var(--primaray);
 }
 
 
@@ -401,7 +397,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .footer .btn.btn-social:hover {
-    color: var(--primary);
+    color: var(--secodery-color) !important;
 }
 
 .footer .btn.btn-link {
@@ -449,4 +445,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+a {
+    color:var(--light) !important;
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--secodery-color) !important;
 }
